DTO pattern impl